--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </p>
       <input id="texto-tarefa" type="text" placeholder="Tarefa" />
       <button id="criar-tarefa">Adicionar tarefa</button>
+      <button id="apaga-tudo">Apagar tudo</button>
     </section>
     <section>
       <ol id="lista-tarefas"></ol>
