--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <input id="texto-tarefa" type="text" placeholder="Tarefa" />
       <button id="criar-tarefa">Adicionar tarefa</button>
       <button id="apaga-tudo">Apagar tudo</button>
+      <button id="remover-finalizados">Remover finalizados</button>
     </section>
     <section>
       <ol id="lista-tarefas"></ol>
