--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <button id="criar-tarefa">Adicionar tarefa</button>
       <button id="apaga-tudo">Apagar tudo</button>
       <button id="remover-finalizados">Remover finalizados</button>
+      <button id="salvar-tarefas">Salvar tarefas</button>
     </section>
     <section>
       <ol id="lista-tarefas"></ol>
