--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <button id="apaga-tudo">Apagar tudo</button>
       <button id="remover-finalizados">Remover finalizados</button>
       <button id="salvar-tarefas">Salvar tarefas</button>
+      <button id="mover-cima">Mover para cima</button>
+      <button id="mover-baixo">Mover para baixo</button>
     </section>
     <section>
       <ol id="lista-tarefas"></ol>
