--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <button id="salvar-tarefas">Salvar tarefas</button>
       <button id="mover-cima">Mover para cima</button>
       <button id="mover-baixo">Mover para baixo</button>
+      <button id="remover-selecionado">Remover Selecionado</button>
     </section>
     <section>
       <ol id="lista-tarefas"></ol>
