--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
     <header>
       <h1>Minha Lista de Tarefas</h1>
     </header>
-    <section>
-      <p id="funcionamento">
-        Clique duas vezes em um item para marcá-lo como completo
-      </p>
-      <input id="texto-tarefa" type="text" placeholder="Tarefa" />
+    <section id="control-input">      
+      <input id="texto-tarefa" type="text" placeholder="Tarefa" size="32px"/>
       <button id="criar-tarefa">Adicionar tarefa</button>
+      <div>
+        <span id="funcionamento">
+        Clique duas vezes em um item para marcá-lo como completo
+        </span>
+      </div>
+    </section>   
+    <section id="container-tarefa">
+      <h3>Tarefas</h2>
+      <ol id="lista-tarefas"></ol>
+    </section>
+    <section id="lista-control">
+      <button id="salvar-tarefas">Salvar tarefas</button>
       <button id="apaga-tudo">Apagar tudo</button>
       <button id="remover-finalizados">Remover finalizados</button>
-      <button id="salvar-tarefas">Salvar tarefas</button>
+      <button id="remover-selecionado">Remover Selecionado</button>      
       <button id="mover-cima">Mover para cima</button>
-      <button id="mover-baixo">Mover para baixo</button>
-      <button id="remover-selecionado">Remover Selecionado</button>
-    </section>
-    <section>
-      <ol id="lista-tarefas"></ol>
+      <button id="mover-baixo">Mover para baixo</button>      
     </section>
     <script src="script.js"></script>
   </body>
